Comments and files hot update Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/frontend/directives/commentsModal/commentsModal.style.styl
+++ b/frontend/directives/commentsModal/commentsModal.style.styl
@@ -1,4 +1,6 @@
 @import "../../../public/libs/css/generalComponentsStyle.styl"
+.commentsCounter
+    font-size 15px
 .commentsModal_wrapper
     position absolute
     &:hover
@@ -17,6 +19,7 @@
         position fixed
         z-index 600
         background-color white
+        font-size 18px
         width 60vw
         top 10vh
         min-width 360px
