--- a/frontend/directives/filesWrapper/filesWrapper.style.styl
+++ b/frontend/directives/filesWrapper/filesWrapper.style.styl
@@ -1,4 +1,6 @@
 @import "../../../public/libs/css/generalComponentsStyle.styl"
+.filesCounter
+    font-size 15px
 .filesWrapper_wrapper
     position absolute
     &:hover
