--- a/frontend/directives/filesWrapper/filesWrapper.template.pug
+++ b/frontend/directives/filesWrapper/filesWrapper.template.pug
@@ -1,4 +1,5 @@
 i.fa.fa-files-o(aria-hidden = "true", ng-click = "fw.toggle()", ng-if = 'fw.scope.files.length')
+    span.filesCounter ({{fw.scope.files.length}})
 .filesWrapper_wrapper(ng-if = "fw.modalToggle")
     .filesWrapper_background(ng-click = "fw.toggle()")
     .filesWrapper_window
