Add comments to messageboard and events page Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/frontend/components/events/eventList.component.pug
+++ b/frontend/components/events/eventList.component.pug
@@ -45,6 +45,6 @@
                         span.avatar(ng-repeat="participant in vm.userEvents[$index].participants track by $index") {{ participant.firstName[0] + participant.lastName[0]}}
                     .toolbar
                         file-wrapper(files = 'event.files')
-                        i.fa.fa-comments-o(ng-link='["Event comments", {id:event._id}]')
+                        comments-modal(comments = 'event.comments',instance-type = '"event"',instance-id = 'event._id',users-info = 'vm.userInfo',instance-title = "event.title")
                 
                 
