--- a/frontend/components/answerCheckin/answer.styl
+++ b/frontend/components/answerCheckin/answer.styl
@@ -61,6 +61,14 @@
             border-radius: 5px
             font-size: 18px
             text-align: center
+        input
+            border: none
+            border-bottom 4px solid border-color
+            background-color disable-input
+            border-radius: 5px
+            font-size: 18px
+            font-family: "Montserrat"
+            text-align: center
     .checkin-holder, .question-holder
         width: 80%
         margin-left: 10%
