--- a/frontend/components/answerCheckin/answer.template.pug
+++ b/frontend/components/answerCheckin/answer.template.pug
@@ -4,11 +4,12 @@
             .row.answer-header
                 h2.col-xs-12.center-xs Check-ins
             .row.checkin-holder.center-xs
-                label.col-xs-3.start-xs(for='answer-filter') Select checkins: 
+                label.col-xs-2.start-xs(for='answer-filter') Select checkins: 
                 select#answer-filter.col-xs-2( ng-init="answr.selectedAnswer = answr.options[0]", ng-model='answr.selectedAnswer', ng-options='item for item in answr.options')
+                input.col-xs-2.col-xs-offset-1(ng-model="answr.seach.question" placeholder="Seach question")
             .row.question-holder
-                .col-xs-8.col-xs-offset-2.question-item(ng-if="answr.selectedAnswer=='all'", ng-repeat="checkin in answr.checkins track by $index") 
-                    p.row.question.start-xs {{ checkin.question}}
+                .col-xs-8.col-xs-offset-2.question-item(ng-if="answr.selectedAnswer=='all'", ng-repeat="checkin in answr.checkins | filter: answr.seach track by $index") 
+                    p.row.question.start-xs {{ checkin.question }}
                         span.col-xs-12(ng-if="checkin.answers.length==0") Sorry, You don't have active checkins for now.
                         .col-xs-12.answer-item(ng-repeat="answer in checkin.answers track by $index")
                             p.col-xs-8.answer-title {{"Answer #"+($index+1)}} &emsp; for &emsp;<b>{{answer.creationDate | date: "dd/MM/y HH:mm" }}</b>
