--- a/frontend/components/messageBoard/messageBoard.pug
+++ b/frontend/components/messageBoard/messageBoard.pug
@@ -20,8 +20,8 @@
 							p(ng-if = "!message.isBigText",ng-bind-html="msgBoard.trustAsHtml(message.description)")
 							p(ng-if = "message.isBigText",ng-bind-html="msgBoard.trustAsHtml(message.firstPart)",id = "firstPart")
 							p(ng-if = "message.showFull",ng-bind-html="msgBoard.trustAsHtml(message.secondPart)",id = "secondPart")
-							a(ng-if="!message.showFull && message.description.length > 300",ng-click="msgBoard.showText($index)") ...
-						a.clicktohide(ng-click="msgBoard.hideText($index)",ng-if="message.showFull") Hide
+							a(ng-if="!message.showFull && message.description.length > 400",ng-click="msgBoard.showText(message._id)") ...
+						a.clicktohide(ng-click="msgBoard.hideText(message._id)",ng-if="message.showFull") Hide
 				.use-button
 						//- i.fa.fa-files-o(ng-link='["File"]')
 						comments-modal(comments = 'message.comments',instance-type = '"messages"',instance-id = 'message._id',users-info = 'msgBoard.userInfo',instance-title = "message.title")
