--- a/frontend/components/checkins/checkinsStyles.styl
+++ b/frontend/components/checkins/checkinsStyles.styl
@@ -4,7 +4,8 @@
     min-width 400px
     width 100%
     text-align justify
-    padding 1em
+    h1
+        header-style()
     //display flex
     //justify-content center
     div.checkins-container
@@ -18,8 +19,6 @@
             //color #212121
             //font-size 1.8em
             //font-family "Montserrat"
-            h1
-                header-style()
         .header-button
             margin 5px 0
             button
@@ -27,8 +26,8 @@
                 font-family "Montserrat"
                 font-size 24px
                 padding 15px 40px
-                --box-shadow-color #1e4179
-                background-color #1d8dbf
+                --box-shadow-color #004D40
+                background-color #2e8f35
         li
             list-style none
 
@@ -43,16 +42,13 @@
         section
             font-size 18px
             //border 1px solid #35a720
-            border-radius 10px
-            background #dadfe1
             overflow hidden
             & > label
                 line-height 2em
                 height 2em
-                background-color #24255e
                 font-size 23px
                 font-weight bold
-                color #f9f9f9
+                color text-input
                 display block
                 text-align center
 
@@ -82,8 +78,10 @@
         input[id="friday"]:checked ~ * label[for="friday"],
         input[id="saturday"]:checked ~ * label[for="saturday"],
         input[id="sunday"]:checked ~ * label[for="sunday"] {
-            background-color: #305c70;
-            border-top: 4px solid #253c4d;
+            box-shadow 0 4px border-color;
+            transform: translateY(-4px);
+            margin-left: 15px;
+            margin-right: 15px;
         }
 
         @media (min-width: 600px) {
@@ -114,12 +112,12 @@
 
             .tabs label {
                 font-size: 30px;
-                color: #ffffff;
+                transition: all 0.2s ease-out;
+                color: text-input;
                 margin-left: 5px;
                 margin-bottom: 5px;
-                background-color: #8eaed1;
-                border: 1px solid #3c718a;
-                border-radius: 10px;
+                background-color: disable-input;
+                border-radius: 7px;
                 float: left;
                 cursor: pointer;
                 padding: .2em 0.5em;
@@ -212,4 +210,17 @@
             &:focus
                 & + .slider
                     box-shadow 0 0 1px #27bcff  //#3E8846
+        .tab
+            label
+                box-shadow none !important
+            .content
+                background-color disable-input
+                border-bottom 4px solid border-color
+                border-radius 7px
+                padding 1em
+                .question
+                    margin-bottom 15px
+                    a
+                        text-decoration none
+                
 
