--- a/frontend/directives/filesWrapper/filesWrapper.template.pug
+++ b/frontend/directives/filesWrapper/filesWrapper.template.pug
@@ -11,7 +11,7 @@ i.fa.fa-files-o(aria-hidden = "true", ng-click = "fw.toggle()", ng-if = 'fw.scop
                 i.fa.fa-times(ng-click = "fw.toggle()")
         .filesWrapper-content.row.start-xs
             .col-xs-12.file_item(ng-repeat = "file in fw.scope.files")
-                a(href = "/api/files/download/{{file._id}}") {{file.name}}
+                a(href = "./api/files/download/{{file._id}}") {{file.name}}
                     span.file_size ({{fw.transformSize(file.size)}})
         .filesWrapper-downloadAll.row.center-xs
-            a.downloadAll(href = "/api/files/downloadAll/{{fw.idArray()}}", ng-if = 'fw.scope.files.length > 1') Download All
+            a.downloadAll(href = "./api/files/downloadAll/{{fw.idArray()}}", ng-if = 'fw.scope.files.length > 1') Download All
