--- a/frontend/components/rightPanel/panel-pug.component.pug
+++ b/frontend/components/rightPanel/panel-pug.component.pug
@@ -1,25 +1,40 @@
+.checkins-main-wrap
+    .row
+        .col-xs-12
+            .check-list.row(ng-repeat= "year in rpanel.years | filter : {year: '!undefined'} track by $index " ng-show="year.")
+                .col-xs-12
+                    ul.checkinsList.row(ng-repeat="month in year.months | filter: {month: '!undefined'} track by $index")
+                        .col-xs-12
+                            ul.checkinsList(ng-repeat="day in month.days | filter: {day: '!undefined'} track by $index")
+                                .col-xs-12
+                                    ul.checkinsList(ng-repeat="checkin in day track by $index") {{checkin.question}}
+                                        .col-xs-12
+                                            li.row(ng-repeat="answer in checkin.answers | filter: {answer: '!noAnswer'} track by $index")
+                                                span.col-xs-3 {{answer.user.firstName + ' '+ (answer.user.lastName?answer.user.lastName:"") }}
+                                                span.col-xs-4(ng-bind-html='answer.answer')
 //- div#chlist(ng-repeat="day in rpanel.dailyCheckinsList  | limitTo:35:1 | filter:rpanel.dayFilter:day.checkins | orderBy:'-' track by $index ")
-//- 	h2.checkin_day(ng-if="day.checkins.length!=0") {{day.day.year}}/{{day.day.month+1}}/{{day.day.date}}
-//- 	//- h3.checkin_day(ng-if="day.checkins.length==0") There are no check-ins for this day - {{day.day.year}}/{{day.day.month+1}}/{{day.day.date}}
-//- 	ul.checkinsList(ng-repeat="checkin in day.checkins | filter:rpanel.checkinEmptyFilter:checkin track by $index") 
-//- 		h2.checkin_title {{checkin.question}}
-//- 		li(ng-repeat="answer in checkin.answers | filter:{ answer: '!noAnswer'} track by $index") 
-//- 			.answer
-//- 				span.user_name {{answer.user.firstName + ' '+ answer.user.lastName }} (
-//- 					span.creation_date {{answer.editedDate | date: "dd/MM/yyyy hh:mm:ss"}})
-//- 				span.answer_text(ng-bind-html='answer.answer')
+//-     h2.checkin_day(ng-if="day.checkins.length!=0") {{day.day.year}}/{{day.day.month+1}}/{{day.day.date}}
+//-     //- h3.checkin_day(ng-if="day.checkins.length==0") There are no check-ins for this day - {{day.day.year}}/{{day.day.month+1}}/{{day.day.date}}
+//-     ul.checkinsList(ng-repeat="checkin in day.checkins | filter:rpanel.checkinEmptyFilter:checkin track by $index") 
+//-         h2.checkin_title {{checkin.question}}
+//-         li(ng-repeat="answer in checkin.answers | filter:{ answer: '!noAnswer'} track by $index") 
+//-             .answer
+//-                 span.user_name {{answer.user.firstName + ' '+ answer.user.lastName }} (
+//-                     span.creation_date {{answer.editedDate | date: "dd/MM/yyyy hh:mm:ss"}})
+//-                 span.answer_text(ng-bind-html='answer.answer')
 
 
-div#chlist(ng-repeat="year in rpanel.years track by $index ") 
-	//- h2.checkin_day(ng-if="day.checkins.length!=0") {{day.day.year}}/{{day.day.month+1}}/{{day.day.date}}
-	//- h3.checkin_day(ng-if="day.checkins.length==0") There are no check-ins for this day - {{day.day.year}}/{{day.day.month+1}}/{{day.day.date}}
-	ul.checkinsList(ng-repeat="month in year.months track by $index") 
-		ul.checkinsList(ng-repeat="day in month.days track by $index") 
-			ul.checkinsList(ng-repeat="checkin in day track by $index") {{checkin.question}}
-				li(ng-repeat="answer in checkin.answers track by $index") 
-		//- h2.checkin_title {{checkin.question}}
-		//- li(ng-repeat="answer in checkin.answers | filter:{ answer: '!noAnswer'} track by $index") 
-		//- 	.answer
-		//- 		span.user_name {{answer.user.firstName + ' '+ answer.user.lastName }} (
-		//- 			span.creation_date {{answer.editedDate | date: "dd/MM/yyyy hh:mm:ss"}})
-		//- 		span.answer_text(ng-bind-html='answer.answer')
+//- div#chlist(ng-repeat="year in rpanel.years track by $index ") 
+//-     //- h2.checkin_day(ng-if="day.checkins.length!=0") {{day.day.year}}/{{day.day.month+1}}/{{day.day.date}}
+//-     //- h3.checkin_day(ng-if="day.checkins.length==0") There are no check-ins for this day - {{day.day.year}}/{{day.day.month+1}}/{{day.day.date}}
+//-     ul.checkinsList(ng-repeat="month in year.months track by $index") 
+//-         ul.checkinsList(ng-repeat="day in month.days track by $index") 
+//-             ul.checkinsList(ng-repeat="checkin in day track by $index") {{checkin.question}} {{year.year}} {{day}}
+//-                 li(ng-repeat="answer in checkin.answers track by $index")
+//-                     span(ng-bind-html='answer.answer')
+        //- h2.checkin_title {{checkin.question}}
+        //- li(ng-repeat="answer in checkin.answers | filter:{ answer: '!noAnswer'} track by $index") 
+        //-     .answer
+        //-         span.user_name {{answer.user.firstName + ' '+ answer.user.lastName }} (
+        //-             span.creation_date {{answer.editedDate | date: "dd/MM/yyyy hh:mm:ss"}})
+        //-         span.answer_text(ng-bind-html='answer.answer')
