--- a/frontend/components/checkins/checkinsCreate-pug.component.pug
+++ b/frontend/components/checkins/checkinsCreate-pug.component.pug
@@ -1,9 +1,11 @@
 .checkins-setup-wrapper
+    h1.header Create Check-in
+        .return-btn(ng-link='["Checkins List"]')
+            i.fa.fa-arrow-left
+            a
+                span return
     .checkins-setup
         .header-setup
-            .close-btn
-                a(ng-link='["Checkins List"]')
-                    i.fa.fa-close
             h3 What question do you want to ask?
             input.question(type='text', ng-model="CheckCr.question" placeholder='Type your question...')
 
@@ -16,18 +18,20 @@
 
         .main-setup
             h3 Who do you want to ask?
+                .select-btn
+                    button(ng-click='CheckCr.toggleAll()') Ask all
             ul.user-list
                 li.list(ng-repeat="part in CheckCr.participants track by $index")
                     label.checkbox(ng-click="CheckCr.toggleChekin()")
                         input(type='checkbox', ng-checked="CheckCr.parties.indexOf(part._id) > -1",ng-click="CheckCr.toggleChekin(part._id)" )
+                        i.fa(aria-hidden = "true",ng-class = "{'fa-square-o': CheckCr.parties.indexOf(part._id) < 0,'fa-check-square-o': CheckCr.parties.indexOf(part._id) > -1}")
                         span  {{part.lastName +' '+  part.firstName}}
 
         .footer-setup
             .container-btn
-                .select-btn
-                    button(ng-click='CheckCr.toggleAll()') Ask all
+                
                 .save-btn
-                    button(ng-click="CheckCr.save()") Save
+                    button(ng-click="CheckCr.save()") Save Check-in
 
             //.schedule
             //    div
