User List update Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/frontend/directives/userList/userList-pug.directive.pug
+++ b/frontend/directives/userList/userList-pug.directive.pug
@@ -1,8 +1,6 @@
 .directive_background(ng-click="ulCtrl.close()")
-.directive_userList.row.center-xs
-	.row.field_description.center-xs.col-xs-10
-		.col-xs-9.center-xs User List
-	.row.close.col-xs-3
+.directive_userList.row.end-xs
+	.close.col-xs-1
 		a(ng-click="ulCtrl.close()")
 			i.fa.fa-times
 	.col-xs-12.user_list.center-xs
