--- a/frontend/directives/userList/userList.styl
+++ b/frontend/directives/userList/userList.styl
@@ -1,3 +1,4 @@
+@import "../../../public/libs/css/generalComponentsStyle.styl"
 .directive_background
 	position fixed
 	z-index 500
@@ -14,11 +15,11 @@
 	min-width 350px
 	top 30%
 	left 30%
-	border 1px solid #6C7A89
-	border-bottom-right-radius 16px
-	border-bottom-left-radius 16px
-	background-color #ecf0f1
-	padding-bottom 10px
+	border-bottom 4px solid border-color
+	border-radius 7px
+	background-color disable-input
+	padding 1.5em
+	padding-top 0.5em
 	.field_description
 		font-family "Montserrat"
 		font-size 1.3em
@@ -27,7 +28,13 @@
 	.close
 		display flex
 		justify-content flex-end
-		padding-left 2px
+		margin-bottom 15px
+		font-size 30px
+		text-shadow none
+		a
+			color #cb4e4e !important
+		color #cb4e4e !important
+		opacity 1 !important
 	.user_list
 		align-items flex-start
 		justify-content center
@@ -61,13 +68,24 @@
 		input
 			outline none
 			border none
+			background-color active-input
 			font-family "Montserrat"
 			font-size 1.3em
 			padding 5px
-			border 1px solid gray
-			border-radius 7px
-			&:hover
-				box-shadow: 0 0 7px #3498db
+			border-radius 4px
+			width 100%
+			border-bottom 2px solid border-color
+			&:focus
+				background-color active-input
+			&:focus::-webkit-input-placeholder
+				color transparent
+			&:focus::-moz-placeholder
+				color transparent
+			&:focus:-ms-input-placeholder
+				color transparent
+			&:focus:-moz-placeholder
+				color transparent
+			
 @media only screen and (max-width: 900px)
 	.directive_userList
 		width 70%
