Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/frontend/directives/commentsModal/commentsModal.style.styl
+++ b/frontend/directives/commentsModal/commentsModal.style.styl
@@ -39,8 +39,9 @@
             .close-ic
                 display flex
                 align-items center
+                justify-content flex-end
                 i
-                    font-size 1.4em
+                    font-size 30px
             .commentsInfo
                 text-align left
                 color text-input
