Add files update Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/frontend/components/editMessage/editMessage.pug
+++ b/frontend/components/editMessage/editMessage.pug
@@ -16,7 +16,7 @@
       p(ng-show="message.content.$invalid && editCtrl.invalidForm") Message is required;
       p(ng-show="message.content.$error.minlength && edit.invalidForm") Message is too short;
       p(ng-show="message.content.$error.maxlength && edit.invalidForm") Message is too long;
-    file-upload(file-list = 'editCtrl.files')
+    file-upload(file-list = 'editCtrl.draft.files')
     .saveBtn
       button(ng-click="editCtrl.edit(message.$valid)") Save
       //div.postBtn(ng-if="editCtrl.draft.isDraft",ng-click="editCtrl.postDraft(message.$valid)") Post on message board
