--- a/frontend/directives/commentsModal/commentsModal.style.styl
+++ b/frontend/directives/commentsModal/commentsModal.style.styl
@@ -41,7 +41,7 @@
                 align-items center
                 justify-content flex-end
                 i
-                    font-size 30px
+                    font-size 1.4em
             .commentsInfo
                 text-align left
                 color text-input
